syntax = "proto3";

package userPackage;

service User {
  rpc GetUser(UserRequest) returns (UserResponse) {};
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string name = 1;
  string role = 2;
}